--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,47 @@
-<html ng-app="xlsx_app">
+<html ng-app="ih_app">
     <head>
-        <title>
-            XLSX UPLOAD
-        </title>
+        <title>In House Analytics</title>
+        <link href="/public/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/public/css/main.css" rel="stylesheet">
+        <script src="/public/libs/jquery/dist/jquery.min.js" type="text/javascript"></script>
+        <script src="/public/libs/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="/public/libs/angular/angular.min.js" type="text/javascript"></script>
+        <script src="/public/libs/angular-route/angular-route.min.js" type="text/javascript"></script>
         <script src="/public/libs/ng-file-upload/ng-file-upload.min.js" type="text/javascript"></script>
         <script src="/public/js/app.js" type="text/javascript"></script>
+        
     </head>
-    <body ng-app="fileUpload" ng-controller="MyCtrl">
-        <h1>This is upload page</h1>
-        <h4>Upload on file select</h4>
-
-        <button ngf-select="uploadFiles($files)" multiple 
-                ngf-pattern="'.xls,.csv,.xlsx'">Select Files</button>
-        <br>
-        <br>Files:
-        <ul>
-            <li ng-repeat="f in files" style="font:smaller">
-                {{f.name}}
-            </li>
-        </ul>
-        <span class="progress" ng-show="progress >= 0">
-            <div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
-        </span>
-        {{errorMsg}}
+    <body>
+        <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="./" class="navbar-brand">VisualBI Inhouse Analytics</a>
+                </div>
+                <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+                <ul class="nav navbar-nav">                    
+                    <li class="dropdown" class="active">
+                        <a class="dropdown-toggle" data-toggle="dropdown">Company <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#/upload/company">Add Company</a></li>
+                            <li><a href="#/view_company">View Company</a></li>                        
+                        </ul>
+                    </li>
+                    <li>
+                    <a href="#">Contact</a>
+                    </li>
+                    <li>
+                    <a href="#">Customers</a>
+                    </li>                    
+                </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="ng-view_div" ng-view></div>
     </body>
 </html>
