--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,7 @@
     <head>
         <title>In House Analytics</title>
         <link href="/public/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/public/css/main.css" rel="stylesheet">
-        <script src="/public/libs/jquery/dist/jquery.min.js" type="text/javascript"></script>
-        <script src="/public/libs/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="/public/libs/angular/angular.min.js" type="text/javascript"></script>
-        <script src="/public/libs/angular-route/angular-route.min.js" type="text/javascript"></script>
-        <script src="/public/libs/ng-file-upload/ng-file-upload.min.js" type="text/javascript"></script>
-        <script src="/public/js/app.js" type="text/javascript"></script>
-        
+        <link href="/public/css/main.css" rel="stylesheet">        
     </head>
     <body>
         <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
@@ -37,11 +30,28 @@
                     </li>
                     <li>
                     <a href="#">Customers</a>
-                    </li>                    
+                    </li>    
+                    <li>
+                    <a href="#">Clicky</a>
+                    </li>
+                    <li>
+                    <a href="#/schema_settings">Settings</a>
+                    </li>                
                 </ul>
                 </nav>
             </div>
         </header>
         <div class="ng-view_div" ng-view></div>
+        <script src="/public/libs/jquery/dist/jquery.min.js" type="text/javascript"></script>
+        <script src="/public/libs/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="/public/libs/angular/angular.min.js" type="text/javascript"></script>
+        <script src="/public/libs/angular-route/angular-route.min.js" type="text/javascript"></script>
+        <script src="/public/libs/ng-file-upload/ng-file-upload.min.js" type="text/javascript"></script>
+        <script src="/public/js/services/utilityService.js" type="text/javascript"></script>
+        <script src="/public/js/services/companyService.js" type="text/javascript"></script>
+        <script src="/public/js/controllers/viewCompanyController.js" type="text/javascript"></script>
+        <script src="/public/js/controllers/uploadCompanyController.js" type="text/javascript"></script>
+        <script src="/public/js/controllers/settingsController.js" type="text/javascript"></script>
+        <script src="/public/js/app.js" type="text/javascript"></script>
     </body>
 </html>
