--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>In House Analytics</title>
         <link href="/public/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/public/libs/datatables.net-dt/css/jquery.dataTables.min.css" rel="stylesheet">
+        <link href="/public/libs/datatables.net-fixedheader-dt/css/fixedHeader.dataTables.min.css" rel="stylesheet">
         <link href="/public/css/main.css" rel="stylesheet">        
     </head>
     <body>
@@ -52,6 +54,8 @@
         <script src="/public/js/controllers/viewCompanyController.js" type="text/javascript"></script>
         <script src="/public/js/controllers/uploadCompanyController.js" type="text/javascript"></script>
         <script src="/public/js/controllers/settingsController.js" type="text/javascript"></script>
+        <script src="/public/libs/datatables.net/js/jquery.dataTables.min.js" type="text/javascript"></script>
+        <script src="/public/libs/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js" type="text/javascript"></script>
         <script src="/public/js/app.js" type="text/javascript"></script>
     </body>
 </html>
