--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
                     <a href="#!/clicky">Clicky</a>
                     </li>
                     <li>
+                    <a href="#!/ipcheck">IP Check</a>
+                    </li>
+                    <li>
                     <a href="#/schema_settings">Settings</a>
                     </li>                
                 </ul>
@@ -56,7 +59,8 @@
         <script src="/public/js/controllers/viewCompanyController.js" type="text/javascript"></script>
         <script src="/public/js/controllers/uploadCompanyController.js" type="text/javascript"></script>
         <script src="/public/js/controllers/settingsController.js" type="text/javascript"></script>   
-        <script src="/public/js/controllers/clickyController.js" type="text/javascript"></script>               
+        <script src="/public/js/controllers/clickyController.js" type="text/javascript"></script>
+        <script src="/public/js/controllers/ipCheckController.js" type="text/javascript"></script>               
         <script src="/public/js/app.js" type="text/javascript"></script>
     </body>
 </html>
