Company page UI changes and paging implementation

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <html ng-app="ih_app">
     <head>
+        <meta charset=utf-8>
+        <meta content="IE=edge" http-equiv=X-UA-Compatible>
+        <meta content="width=device-width,initial-scale=0.67" name=viewport>
         <title>In House Analytics</title>
         <link href="/public/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">    
         <link href="/public/libs/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" rel="stylesheet">    
